--- a/CustomerApp/app/src/main/res/layout/activity_splash_screen.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,10 +7,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@android:color/white"
     tools:context="com.getmecab.customerapp.SplashScreen">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:text="GetMeCab"
+        android:textSize="@android:dimen/app_icon_size"
+        android:textColor="#e69310"/>
 </RelativeLayout>
