--- a/CustomerApp/app/src/main/res/layout/activity_splash_screen.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@android:color/white"
-    tools:context="com.getmecab.customerapp.SplashScreen">
+    tools:context=".activity.SplashScreen">
 
     <TextView
         android:layout_width="wrap_content"
