--- a/CustomerApp/app/src/main/res/values/dimens.xml
+++ b/CustomerApp/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="textView_text_size">22dp</dimen>
     <dimen name="layout_margin_top">20dp</dimen>
     <dimen name="layout_margin_sign_up_top">5dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="nav_header_vertical_spacing">16dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
